--- a/client/app/less/al/modules/forms.less
+++ b/client/app/less/al/modules/forms.less
@@ -1,3 +1,8 @@
+//Bootstrap style rewritted
+.form-horizontal .radio{
+  min-height: 19px;
+}
+
 // style for admin lite forms
 .al-theme {
     .custom_form {
@@ -8,23 +13,32 @@
             height: 35px;
             margin-bottom: 10px;
             position: relative;
+            .radio{
+              width: 100px;
+            }
             > label {
                 text-align: left;
+                float: left;
                 line-height: 33px;
                 padding-top: 1px;
             }
             > div {
                 height: auto;
-                flex-grow: 1;
+                float: left;
+                width: 82%
+            }
+            h4{
+              margin-top: 6px;
             }
             input {
-                width: 100%;
+                width: 80%;
                 //height: 100%;
             }
             select {
                 border: 0;
                 margin: 0;
                 box-shadow: none;
+                width: auto;
             }
             .radio input {
                 width: auto;
